--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.3.0",
+    "@react-spring/web": "^9.7.5",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-percentage-bar": "^1.2.5",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
